<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginBottom="@dimen/_10sdp"
    >
    <ImageView
        android:id="@+id/notification"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_27sdp"
        android:layout_marginStart="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_marginEnd="@dimen/_1sdp"
        android:layout_marginBottom="@dimen/_1sdp"
        android:src="@drawable/img_notification" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/notification"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:id="@+id/linear"
        android:layout_marginStart="@dimen/_8sdp"
>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trending"
            android:fontFamily="@font/oleoscript_bold"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:id="@+id/texthighlight"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_post_is_trending_in_the_hot_section"
            android:fontFamily="@font/lufgaregular"
            android:textSize="@dimen/_11ssp"
            android:id="@+id/text"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:textColor="#777777"
            />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9_56_am"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:fontFamily="@font/lufgabold"
        android:textSize="@dimen/_11sdp"
        android:id="@+id/time"
        android:textColor="@color/black"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#F2F4F5"
        android:layout_marginHorizontal="@dimen/_10sdp"
         android:layout_below="@id/linear"
        android:layout_marginTop="@dimen/_7sdp"
        />
</RelativeLayout>