<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_marginTop="@dimen/_20sdp"
    tools:context=".view.SearchActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative1"
        android:layout_marginTop="@dimen/_10sdp"
        >
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/arrowleft"
            android:id="@+id/arrow"
            android:layout_marginStart="@dimen/_7sdp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/lufgasemibold"
            android:textSize="@dimen/_12ssp"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative1"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:padding="10dp"
        android:background="@drawable/search_shap"
        android:id="@+id/linear"
        >
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/search"
            android:layout_marginEnd="15dp"
            android:layout_alignParentEnd="true"
            android:id="@+id/search"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Search Mehndi"
            android:background="@null"
            android:textColor="#7D7D7D"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16sp"
            android:maxLines="1"
            android:id="@+id/edt"
            />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linear"
        android:id="@+id/recyclelist"
        android:visibility="gone"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:id="@+id/recycleData"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:id="@+id/relative2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search history"
            android:fontFamily="@font/lufgamedium"
            android:textSize="@dimen/_14ssp"
            android:id="@+id/searchHistorytext"
            />
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/delete"
            android:id="@+id/delete"
            android:layout_alignParentRight="true"
            android:layout_marginStart="@dimen/_7sdp"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear2"
        android:layout_below="@id/relative2"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
     >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shap"
            android:padding="@dimen/_8sdp"
            android:text="@string/spring_outing"
            android:textColor="@color/blackPro"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teddy"
            android:textSize="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@color/blackPro"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/button_shap"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toy"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/blackPro"
            android:padding="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/button_shap"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_moe"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/blackPro"
            android:layout_marginStart="@dimen/_10sdp"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/button_shap"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear2"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:id="@+id/relative3"
>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_search"
        android:fontFamily="@font/lufgamedium"
        android:textSize="@dimen/_14ssp"
        android:id="@+id/topSearch"
        />
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/img_fire"
            android:layout_toRightOf="@id/topSearch"
            android:layout_marginStart="@dimen/_5sdp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative3"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:id="@+id/relative4"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spring_outing"
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/blackPro"
        android:padding="@dimen/_8sdp"
        android:background="@drawable/button_shap"
        />
    </RelativeLayout>

     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/relative5"
         android:layout_below="@id/relative4"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginHorizontal="@dimen/_10sdp"
         >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/hot_circle"
             android:fontFamily="@font/lufgamedium"
             android:textSize="@dimen/_14ssp"
             android:id="@+id/hotCircle"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/more"
             android:textColor="@color/blacknude"
             android:fontFamily="@font/lufgaregular"
             android:textSize="@dimen/_12ssp"
             android:layout_alignParentRight="true"
             android:id="@+id/more"
             />
     </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:id="@+id/recycle"
        android:layout_below="@id/relative5"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative6"
        android:layout_below="@id/recycle"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Popular Q &amp;A"
        android:fontFamily="@font/lufgamedium"
        android:textSize="@dimen/_14ssp"
        android:id="@+id/popular"
        />
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycle1"
        android:layout_below="@id/relative6"
        android:layout_marginTop="@dimen/_10sdp"
        />
    </RelativeLayout>
    </RelativeLayout>
